--- a/collectionView/Base.lproj/Main.storyboard
+++ b/collectionView/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H0S-op-nAR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="926" y="939"/>
+            <point key="canvasLocation" x="925.60000000000002" y="938.68065967016503"/>
         </scene>
     </scenes>
 </document>
